Change from Airtable to Barak

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <img src="img/undraw_airtable.svg" alt="" id="image1">
             </div>
             <div class="image-container">
-                <h2>airtable</h2>
+                <h2>Barak</h2>
                 <img src="img/undraw_designer_Light.svg" alt="" id="image2">
             </div>
             <div class="image-container">
