--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
         <div class="project-container">
             <div class="image-container">
                 <h2>พัฒนาเว็บไซต์ต่างๆ</h2>
-                <img src="img/undraw_airtable.svg" alt="" id="image1">
+                <img src="img/undraw_interior_design_light.svg" alt="" id="image1">
             </div>
             <div class="image-container">
-                <h2>Barak</h2>
-                <img src="img/undraw_designer_Light.svg" alt="" id="image2">
+                <h2>airtable</h2>
+                <img src="img/undraw_designer_light.svg" alt="" id="image2">
             </div>
             <div class="image-container">
                 <h2>ฟรีแลนด์</h2>
-                <img src="img/undraw_Freelance_light.svg" alt="" id="image3">
+                <img src="img/undraw_freelance_light.svg" alt="" id="image3">
             </div>
         </div>
    </section>
